--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:title/
+permalink: /jekyll/:title/
 
 # Exclude these files from your production _site
 exclude:
