--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,9 @@
 name: Aakash Kathuria
 
 domain: https://arjunbahl.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://arjunbahl.github.io  # the base hostname and protocol for your site, e.g. http://example.com
-baseurl: /jekyll/      # place folder name if the site is served in a subfolder
+url: https://arjunbahl.github.io/jekyll  # the base hostname and protocol for your site, e.g. http://example.com
 
-permalink: /jekyll/:title/
+permalink: /:title/
 
 # Exclude these files from your production _site
 exclude:
