--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 name: Aakash Kathuria
 
 domain: https://arjunbahl.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://arjunbahl.github.io/jekyll  # the base hostname and protocol for your site, e.g. http://example.com
+url: https://arjunbahl.github.io/  # the base hostname and protocol for your site, e.g. http://example.com
 
-permalink: /:title/
+permalink: /jekyll/:title/
 
 # Exclude these files from your production _site
 exclude:
