--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,22 @@
 # Name of your site (displayed in the header)
 name: Aakash Kathuria
 
-domain: https://arjunbahl.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://arjunbahl.github.io/  # the base hostname and protocol for your site, e.g. http://example.com
+
+
+
+# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
+# Used for Sitemap.xml and your RSS feed
+url:
+
+# If you're hosting your site at a Project repository on GitHub pages
+# (http://yourusername.github.io/repository-name)
+# and NOT your User repository (http://yourusername.github.io)
+# then add in the baseurl here, like this: "/repository-name"
+baseurl: ""
+
+#
+# !! You don't need to change any of the configuration flags below !!
+#
 
 permalink: /jekyll/:title/
 
