--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ url: https://arjunbahl.github.io/jekyll/
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/jekyll"
 
 #
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /jekyll/:title/
+permalink: /:title/
 
 # Exclude these files from your production _site
 exclude:
