--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ name: Aakash Kathuria
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://arjunbahl.github.io/jekyll/
+url: https://arjunbahl.github.io/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/jekyll"
+baseurl: /jekyll
 
 #
 # !! You don't need to change any of the configuration flags below !!
